Implement image viewer dialog activity and full screen activity

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,8 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
+        maven { url "https://jitpack.io" }
+        maven { url "https://jcenter.bintray.com" }
     }
 }
 rootProject.name = "Amaze File Utilities"
