--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,18 @@
+buildscript {
+    ext {
+        jacocoVersion = "0.8.7"
+        androidXLifecycleVersion = "2.3.1"
+        glideVersion = '4.11.0'
+        fragment_version = "1.3.6"
+    }
+}
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.hiya.jacoco-android'
     id 'kotlin-parcelize'
-}
-
-buildscript {
-    ext {
-        jacocoVersion = "0.8.7"
-        androidXLifecycleVersion = "2.3.1"
-    }
+    id 'kotlin-kapt'
 }
 
 android {
@@ -23,10 +26,6 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        //For Dimezis/BlurView
-        renderscriptTargetApi 29 //must match target sdk and build tools
-        renderscriptSupportModeEnabled true
     }
 
     buildTypes {
@@ -49,13 +48,7 @@ android {
             minifyEnabled false
         }
 
-        signingConfigs {
-            release
-            config
-        }
-
         release {
-            signingConfig signingConfigs.release
             minifyEnabled true
         }
     }
@@ -70,12 +63,13 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    //For blurring quickview background
-    implementation 'com.eightbitlab:blurview:1.6.6'
-    implementation 'com.eightbitlab:supportrenderscriptblur:1.0.2'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidXLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidXLifecycleVersion"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    //Glide: loads icons seemlessly
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
