--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:hardwareAccelerated="false"
         android:largeHeap="true"
         android:banner="@drawable/about_header"
+        android:requestLegacyExternalStorage="true"
         >
         <activity android:name=".LandingActivity"
             android:label="@string/app_name"
