--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".AmazeApplication"
@@ -19,7 +22,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AmazeFileUtilities"
-        android:hardwareAccelerated="false"
+        android:hardwareAccelerated="true"
         android:largeHeap="true"
         android:banner="@drawable/about_header"
         android:requestLegacyExternalStorage="true"
@@ -47,7 +50,24 @@
             </intent-filter>
         </activity>
 
+
+        <activity android:name=".video_player.VideoPlayerDialogActivity"
+            android:label="@string/video_player"
+            android:theme="@style/Theme.AppCompat.Dialog"
+            android:exported="true">
+            <intent-filter android:label="@string/intent_video_player" tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+                <data android:mimeType="video/*" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".image_viewer.ImageViewerActivity"
             android:label="@string/image_viewer" android:theme="@style/Theme.AppCompat" />
+
+        <activity android:name=".video_player.VideoPlayerActivity"
+            android:label="@string/video_player"
+            android:theme="@style/Theme.AmazeFileUtilities.FullScreen" />
     </application>
 </manifest>
