--- a/build.gradle
+++ b/build.gradle
@@ -29,12 +29,14 @@ allprojects {
 
 spotless {
     java {
+        licenseHeaderFile 'spotless.license-java'
         target 'app/src/**/*.java'
         googleJavaFormat('1.7')
         removeUnusedImports() // removes any unused imports
         importOrder 'java', 'javax', 'org', 'com', 'android', 'androidx', ''
     }
     kotlin {
+        licenseHeaderFile 'spotless.license-java'
         target 'app/src/**/*.kt'
         ktlint("0.39.0").userData(['disabled_rules': 'no-wildcard-imports',
                                    'kotlin_imports_layout': 'idea', 'indent_size': '4',
