--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,19 @@
             android:label="@string/video_player"
             android:theme="@style/Theme.AmazeFileUtilities.FullScreen" />
 
+        <activity android:name=".pdf_viewer.PdfViewerActivity"
+            android:label="@string/pdf_viewer" android:theme="@style/Theme.AppCompat"
+            android:exported="true">
+            <intent-filter android:label="@string/pdf_viewer" tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+                <data android:mimeType="application/pdf" />
+<!--                <data android:mimeType="application/msword" />-->
+<!--                <data android:mimeType="application/vnd.openxmlformats-officedocument.wordprocessingml.document" />-->
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
+            </intent-filter>
+        </activity>
+
         <service android:name=".audio_player.AudioPlayerService"
             android:exported="true"
             android:description="@string/audio_player_service_description"
