--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
+    <uses-sdk tools:overrideLibrary="com.folioreader"/>
 
     <uses-feature
         android:name="android.software.leanback"
@@ -83,13 +86,22 @@
             android:theme="@style/Theme.AmazeFileUtilities.FullScreen" />
 
         <activity android:name=".pdf_viewer.PdfViewerActivity"
-            android:label="@string/pdf_viewer" android:theme="@style/Theme.AppCompat"
+            android:label="@string/pdf_viewer" android:theme="@style/Theme.AmazeFileUtilities"
             android:exported="true">
             <intent-filter android:label="@string/pdf_viewer" tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
                 <data android:mimeType="application/pdf" />
-<!--                <data android:mimeType="application/msword" />-->
-<!--                <data android:mimeType="application/vnd.openxmlformats-officedocument.wordprocessingml.document" />-->
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".epub_viewer.EpubViewerActivity"
+            android:label="@string/epub_viewer" android:theme="@style/Theme.AppCompat.Dialog"
+            android:exported="true">
+            <intent-filter android:label="@string/epub_viewer" tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+                <data android:mimeType="application/epub+zip" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.OPENABLE" />
             </intent-filter>
