--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.amaze.fileutilities">
 
+    <uses-sdk tools:overrideLibrary="com.folioreader" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
-    <uses-sdk tools:overrideLibrary="com.folioreader"/>
 
     <uses-feature
         android:name="android.software.leanback"
@@ -22,109 +23,148 @@
 
     <application
         android:name=".AmazeApplication"
+        android:banner="@drawable/about_header"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AmazeFileUtilities"
-        android:hardwareAccelerated="true"
-        android:largeHeap="true"
-        android:banner="@drawable/about_header"
-        android:requestLegacyExternalStorage="true"
-        >
-        <activity android:name=".LandingActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Dialog"
-            android:exported="true">
-            <intent-filter >
+        android:theme="@style/Theme.AmazeFileUtilities">
+        <activity
+            android:name=".home_page.MainActivity"
+            android:exported="true"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.AmazeFileUtilities">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".image_viewer.ImageViewerDialogActivity"
+        <activity
+            android:name=".LandingActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Dialog">
+        </activity>
+        <activity
+            android:name=".image_viewer.ImageViewerDialogActivity"
+            android:exported="true"
             android:label="@string/image_viewer"
-            android:theme="@style/Theme.AppCompat.Dialog"
-            android:exported="true">
-            <intent-filter android:label="@string/intent_image_viewer" tools:ignore="AppLinkUrlError">
+            android:theme="@style/Theme.AppCompat.Dialog">
+            <intent-filter
+                android:label="@string/intent_image_viewer"
+                tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
+
                 <data android:mimeType="image/*" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.OPENABLE" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".video_player.VideoPlayerDialogActivity"
+        <activity
+            android:name=".video_player.VideoPlayerDialogActivity"
+            android:exported="true"
             android:label="@string/video_player"
-            android:theme="@style/Theme.AppCompat.Dialog"
-            android:exported="true">
-            <intent-filter android:label="@string/intent_video_player" tools:ignore="AppLinkUrlError">
+            android:theme="@style/Theme.AppCompat.Dialog">
+            <intent-filter
+                android:label="@string/intent_video_player"
+                tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
+
                 <data android:mimeType="video/*" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.OPENABLE" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".audio_player.AudioPlayerDialogActivity"
-            android:theme="@style/Theme.AppCompat.Dialog"
-            android:exported="true">
-            <intent-filter android:label="@string/audio_player" tools:ignore="AppLinkUrlError">
+        <activity
+            android:name=".audio_player.AudioPlayerDialogActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Dialog">
+            <intent-filter
+                android:label="@string/audio_player"
+                tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
+
                 <data android:mimeType="audio/*" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.OPENABLE" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".image_viewer.ImageViewerActivity"
-            android:label="@string/image_viewer" android:theme="@style/Theme.AppCompat" />
-
-        <activity android:name=".video_player.VideoPlayerActivity"
+        <activity
+            android:name=".image_viewer.ImageViewerActivity"
+            android:label="@string/image_viewer"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
+            android:name=".video_player.VideoPlayerActivity"
             android:label="@string/video_player"
             android:theme="@style/Theme.AmazeFileUtilities.FullScreen" />
-
-        <activity android:name=".pdf_viewer.PdfViewerActivity"
-            android:label="@string/pdf_viewer" android:theme="@style/Theme.AmazeFileUtilities"
-            android:exported="true">
-            <intent-filter android:label="@string/pdf_viewer" tools:ignore="AppLinkUrlError">
-                <action android:name="android.intent.action.VIEW" />
-                <data android:mimeType="application/pdf" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.OPENABLE" />
-            </intent-filter>
-        </activity>
-
-        <activity android:name=".epub_viewer.EpubViewerActivity"
-            android:label="@string/epub_viewer" android:theme="@style/Theme.AppCompat.Dialog"
-            android:exported="true">
-            <intent-filter android:label="@string/epub_viewer" tools:ignore="AppLinkUrlError">
-                <action android:name="android.intent.action.VIEW" />
-                <data android:mimeType="application/epub+zip" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.OPENABLE" />
-            </intent-filter>
-        </activity>
-
-        <activity android:name=".docx_viewer.DocxViewerActivity"
-            android:label="@string/docx_viewer" android:theme="@style/Theme.AmazeFileUtilities"
-            android:exported="true">
-            <intent-filter android:label="@string/docx_viewer" tools:ignore="AppLinkUrlError">
-                <action android:name="android.intent.action.VIEW" />
-                <data android:mimeType="application/vnd.openxmlformats-officedocument.wordprocessingml.document" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.OPENABLE" />
-            </intent-filter>
-        </activity>
-
-        <service android:name=".audio_player.AudioPlayerService"
+        <activity
+            android:name=".pdf_viewer.PdfViewerActivity"
             android:exported="true"
+            android:label="@string/pdf_viewer"
+            android:theme="@style/Theme.AmazeFileUtilities">
+            <intent-filter
+                android:label="@string/pdf_viewer"
+                tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+
+                <data android:mimeType="application/pdf" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".epub_viewer.EpubViewerActivity"
+            android:exported="true"
+            android:label="@string/epub_viewer"
+            android:theme="@style/Theme.AppCompat.Dialog">
+            <intent-filter
+                android:label="@string/epub_viewer"
+                tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+
+                <data android:mimeType="application/epub+zip" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".docx_viewer.DocxViewerActivity"
+            android:exported="true"
+            android:label="@string/docx_viewer"
+            android:theme="@style/Theme.AmazeFileUtilities">
+            <intent-filter
+                android:label="@string/docx_viewer"
+                tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+
+                <data android:mimeType="application/vnd.openxmlformats-officedocument.wordprocessingml.document" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
+            </intent-filter>
+        </activity>
+
+        <service
+            android:name=".audio_player.AudioPlayerService"
             android:description="@string/audio_player_service_description"
-            android:enabled="true">
-            <!--<intent-filter>
+            android:enabled="true"
+            android:exported="true">
+
+            <!--
+            <intent-filter>
                 <action android:name="android.media.browse.MediaBrowserService"/>
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </service>
 
         <receiver android:name=".audio_player.MediaButtonIntentReceiver">
@@ -143,4 +183,5 @@
                 android:resource="@xml/provider_paths" />
         </provider>
     </application>
+
 </manifest>
