--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         <activity
             android:name=".home_page.MainActivity"
             android:exported="true"
-            android:label="@string/title_activity_main"
+            android:label="@string/app_name"
             android:theme="@style/Theme.AmazeFileUtilities">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
