Implement search list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.AmazeFileUtilities"
-            android:screenOrientation="locked">
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
