--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.amaze.fileutilities">
 
-    <uses-sdk tools:overrideLibrary="com.folioreader" />
+    <uses-sdk tools:overrideLibrary="com.folioreader, linc.com.amplituda" />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -25,12 +25,11 @@
         android:name=".AmazeApplication"
         android:banner="@drawable/about_header"
         android:hardwareAccelerated="true"
-        android:icon="@mipmap/ic_launchers"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
+        android:extractNativeLibs="false"
         android:theme="@style/Theme.AmazeFileUtilities">
         <activity
             android:name=".home_page.MainActivity"
