--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,10 @@ dependencies {
     implementation 'com.ramijemli.percentagechartview:percentagechartview:0.3.1'
     implementation  'com.github.massoudss:waveformSeekBar:4.1.0'
     implementation 'com.github.lincollincol:amplituda:2.1.2'
+    //Simple library show
+    implementation('com.mikepenz:aboutlibraries:6.1.1@aar') {
+        transitive = true
+    }
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
