--- a/.github/workflows/android-main.yml
+++ b/.github/workflows/android-main.yml
@@ -42,3 +42,8 @@ jobs:
           ./gradlew assembledebug
         env:
           TZ: UTC
+      - name: Publish on Telegram
+        run: |
+          COMMIT_COUNT=$(git rev-list --count ${GITHUB_REF})
+          cp app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/amaze-utils-v0.1-$(echo $COMMIT_COUNT).apk
+          echo $(curl -v -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" -F document=@app/build/outputs/apk/debug/amaze-utils-v0.1-$(echo $COMMIT_COUNT).apk https://api.telegram.org/${{ secrets.AMAZE_BOT_ID }}:${{ secrets.TELEGRAM_INTEGRATION_KEY }}/sendDocument)
