--- a/.github/workflows/android-main.yml
+++ b/.github/workflows/android-main.yml
@@ -47,4 +47,4 @@ jobs:
           COMMIT_COUNT=$(git rev-list --count ${GITHUB_REF})
           cp app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/amaze-utils-v0.1-$(echo $COMMIT_COUNT).apk
           tar -zcvf app/build/outputs/apk/debug/amaze-utils-v0.1-$(echo $COMMIT_COUNT).tar.gz app/build/outputs/apk/debug/amaze-utils-v0.1-$(echo $COMMIT_COUNT).apk
-          echo $(curl -v -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" -F files=@app/build/outputs/apk/debug/amaze-utils-v0.1-$(echo $COMMIT_COUNT).tar.gz https://api.telegram.org/${{ secrets.AMAZE_BOT_ID }}:${{ secrets.TELEGRAM_INTEGRATION_KEY }}/sendDocument)
+          echo $(curl -v -F "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" --header "Content-Type: multipart/form-data" -F document=@app/build/outputs/apk/debug/amaze-utils-v0.1-$(echo $COMMIT_COUNT).apk https://api.telegram.org/${{ secrets.AMAZE_BOT_ID }}:${{ secrets.TELEGRAM_INTEGRATION_KEY }}/sendDocument)
