--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
     implementation "com.folioreader:folioreader:0.5.4"
     implementation 'org.zwobble.mammoth:mammoth:1.4.2'
+    implementation 'me.zhanghai.android.fastscroll:library:1.1.7'
 
     // https://mvnrepository.com/artifact/com.drewnoakes/metadata-extractor
     implementation group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.16.0'
