--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.amaze.fileutilities">
 
-    <uses-sdk tools:overrideLibrary="com.folioreader, linc.com.amplituda, me.zhanghai.android.fastscroll" />
+    <uses-sdk tools:overrideLibrary="com.folioreader, linc.com.amplituda, me.zhanghai.android.fastscroll, org.opencv" />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -29,7 +29,6 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
-        android:extractNativeLibs="false"
         android:theme="@style/Theme.AmazeFileUtilities">
         <activity
             android:name=".home_page.MainActivity"
