--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         androidXLifecycleVersion = "2.3.1"
         glideVersion = '4.11.0'
         fragment_version = "1.3.6"
+        roomVersion = "2.4.1"
     }
 }
 
@@ -69,6 +70,12 @@ android {
 
     packagingOptions {
         pickFirst '**/*.so'
+        pickFirst 'versionchanges.txt'
+        pickFirst 'META-INF/DEPENDENCIES'
+        pickFirst 'META-INF/NOTICE'
+        pickFirst 'META-INF/LICENSE'
+        pickFirst 'META-INF/LICENSE.txt'
+        pickFirst 'META-INF/INDEX.LIST'
     }
 }
 
@@ -117,6 +124,10 @@ dependencies {
         transitive = true
     }
     implementation 'com.quickbirdstudios:opencv:4.5.3.0'
+    // https://mvnrepository.com/artifact/net.sourceforge.tess4j/tess4j
+    implementation 'com.rmtheis:tess-two:9.1.0'
+    implementation("androidx.room:room-runtime:$roomVersion")
+    annotationProcessor("androidx.room:room-compiler:$roomVersion")
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
