--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         androidXLifecycleVersion = "2.3.1"
         glideVersion = '4.11.0'
         fragment_version = "1.3.6"
-        roomVersion = "2.4.1"
+        roomVersion = "2.4.0"
     }
 }
 
@@ -17,7 +17,7 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.amaze.fileutilities"
@@ -126,8 +126,8 @@ dependencies {
     implementation 'com.quickbirdstudios:opencv:4.5.3.0'
     // https://mvnrepository.com/artifact/net.sourceforge.tess4j/tess4j
     implementation 'com.rmtheis:tess-two:9.1.0'
-    implementation("androidx.room:room-runtime:$roomVersion")
-    annotationProcessor("androidx.room:room-compiler:$roomVersion")
+    implementation "androidx.room:room-runtime:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
