Enable shrink resources

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -48,10 +49,12 @@ android {
         debug {
             applicationIdSuffix ".debug"
             minifyEnabled true
+            shrinkResources true
         }
 
         release {
             minifyEnabled true
+            shrinkResources true
         }
     }
 
