Fix ml detector resource alloc

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,8 @@ android {
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
         }
 
         release {
