--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -106,7 +105,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 //    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
-    implementation "com.folioreader:folioreader:0.5.4"
+    implementation 'com.github.VishalNehra:FolioReader-Android:0.5.5'
     implementation 'org.zwobble.mammoth:mammoth:1.4.2'
     implementation 'me.zhanghai.android.fastscroll:library:1.1.7'
     implementation "ch.acra:acra-core:5.7.0"
