--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,6 +140,8 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:files:3.3.0'
     implementation 'androidx.mediarouter:mediarouter:1.2.6'
     implementation 'com.google.android.gms:play-services-cast-framework:21.0.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'org.jsoup:jsoup:1.14.3'
 
     //Detect memory leaks
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
