--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,9 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
-        android:theme="@style/Theme.AmazeFileUtilities">
+        android:theme="@style/Theme.AmazeFileUtilities"
+        android:networkSecurityConfig="@xml/network_security_config"
+        >
         <activity
             android:name=".home_page.MainActivity"
             android:exported="true"
