--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,6 +108,7 @@
             android:name=".video_player.VideoPlayerActivity"
             android:label="@string/video_player"
             android:supportsPictureInPicture="true"
+            android:resizeableActivity="true"
             android:launchMode="singleTask"
             android:taskAffinity="com.amaze.fileutilitiespip"
             android:theme="@style/Theme.AmazeFileUtilities.FullScreen.Dark" />
